2007-04-30 Yen-Ju Chen <yjchenx at gmail>

	* AZGNUstepApp (-showAction:):
	Set focus to target GNUstep xwindow which fix #9047.
	* AZDock:
	Add "AZSwitch", "Corner" and "Idle" into blacklist.

2007-06-13  Quentin Mathe <qmathe@club-internet.fr>

	* AZGNUstep.app (-initWithApplicationName:): Modified to use IconKit by default.
	* GNUmakefile: Modified to link IconKit.

2007-05-24  Quentin Mathe <qmathe@club-internet.fr>

	* GNUmakefile: Added ETOILE_CORE_MODULE.

2007-04-30 Yen-Ju Chen <yjchenx at gmail>

	* In case the desktop is unknown.

2007-04-26 Yen-Ju Chen <yjchenx at gmail>

	* Draw small number of current workspace on top-left corner.

2007-04-24 Yen-Ju Chen <yjchenx at gmail>

	* Support creating new window with modifier key for xwindow.

2007-04-14 Yen-Ju Chen <yjchenx at gmail>

	* Use XWindowSetActiveWindwo to raise window.

2007-04-13 Yen-Ju Chen <yjchenx at gmail>

	* Minor clean up.

2007-04-12 Yen-Ju Chen <yjchenx at gmail>

	* Use Etoile logo from MenuServer.

2007-04-11 Yen-Ju Chen <yjchenx at gmail>

	* Check command in case a GNUstep application is launched
	  from non-standard places.

2007-04-06 Yen-Ju Chen <yjchenx at gmail>

	* Reserve space for dock so that full screen window 
	  will not be covered.
	* Initial support of auto-hidden. There are some glitches, though.

2007-04-01 Yen-Ju Chen <yjchenx at gmail>

	* AZDockletApp: Experimentally support WindowMaker docklet

2007-03-19 Yen-Ju Chen <yjchenx at gmail>
	
	* Try to catch exception from NSConnection.

2007-03-18 Yen-Ju Chen <yjchenx at gmail>

	* Use WorkspaceCommKit if building with etoile.

2007-03-17 Yen-Ju Chen <yjchenx at gmail>

	* Add TrashCan in blacklist.
	* Put a note on how to prevent GWorkspace from launching automatically.

2007-03-15 Yen-Ju Chen <yjchenx at gmail>

	* Add TODO in README.

2007-03-14 Yen-Ju Chen <yjchenx at gmail>

	* Fix ghost state after moving it to AZDockView.
	* Since NSWorkspace is not reliable, check the existance of 