@@ -144,6 +144,7 @@
   if (icon)
     [view setImage: icon];
   [[view menu] setTitle: appName];
+  [view setToolTip: appName];
   return self;
 }
 
